# agaip

./: .env.example  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Tasks_2025-06-24T23-08-48.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  SUPPORT.md  dependabot.yml  labeler-issues.yml  labeler-prs.yml  labels.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: auto-label.yml  benchmark.yml  ci.yml  close-dependabot-prs.yml  codeql.yml  community.yml  dependency-review.yml  docs.yml  project-management.yml  release.yml  stale.yml
agaip/: __init__.py  agent_manager.py  api.py  cli.py  config.py  db.py
agaip/agents/: agent.py
agaip/api/: __init__.py  app.py  dependencies.py  middleware.py
agaip/api/v1/: __init__.py  admin.py  agents.py  health.py  tasks.py
agaip/config/: __init__.py  secrets.py  settings.py
agaip/config/environments/: __init__.py  development.py  production.py  testing.py
agaip/core/: __init__.py  application.py  celery.py  container.py  events.py  exceptions.py
agaip/database/: __init__.py  connection.py
agaip/database/models/: __init__.py  agent.py  base.py  task.py  user.py
agaip/database/repositories/: __init__.py  agent.py  base.py  task.py  user.py
agaip/models/: task.py
agaip/plugins/: __init__.py  base.py  base_model.py  dummy_model.py  loader.py
agaip/plugins/builtin/: __init__.py  dummy_model.py
agaip/services/: __init__.py  agent_service.py  plugin_service.py  task_service.py  tasks.py
agaip/utils/: plugin_loader.py
docs/: ROADMAP.md
k8s/: deployment.yaml  service.yaml
tests/: test_basic.py
tests/benchmarks/: test_performance.py
